// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link applies the elementAttributes prop correctly 1`] = `
.emotion-0 {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #43B02A;
}

.emotion-0:hover {
  color: #177D05;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

<a
  aria-label="foo"
  className="emotion-0"
  href="#"
  onClick={[Function]}
>
  HI
</a>
`;

exports[`Link renders correctly when style overrides are provided 1`] = `
.emotion-0 {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #43B02A;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-0:hover {
  color: #177D05;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

<a
  className="emotion-0"
  href="#"
  onClick={[Function]}
>
  HI
</a>
`;

exports[`Link renders without throwing 1`] = `
.emotion-0 {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #43B02A;
}

.emotion-0:hover {
  color: #177D05;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

<a
  className="emotion-0"
  href="#"
  onClick={[Function]}
>
  HI
</a>
`;
